<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/welcome_background_tile" >

    <ImageView
        android:id="@+id/sa_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:src="@drawable/intro_screen_graphics" />

    <TextView
        android:id="@+id/login_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/settings_divider"
        android:gravity="center_vertical"
        android:paddingLeft="15.0dip"
        android:text="welcome to NutterTools"
        android:textColor="#ff000000"
        android:textSize="14.0dip"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/header_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-1.0dip"
        android:src="@drawable/settings_divider_arrow" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header_arrow"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:scaleType="fitXY"
                android:src="@drawable/separator" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15.0dip"
                android:text="readme"
                android:textColor="#ffffffff"
                 android:textStyle="italic" 
                android:textSize="14.0dip" />

            <TextView
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip"
                android:layout_weight="0.00"
                android:background="@drawable/text_bg"
                android:text="@string/warning1"
                android:inputType="number"
                android:textColor="#ffffffff"
                android:textSize="14.0dip"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip"
                android:layout_weight="0.00"
                android:background="@drawable/text_bg"
                android:text="@string/warning2"
                android:inputType="number"
                android:textColor="#ffffffff"
                android:textSize="14.0dip"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip"
                android:layout_weight="0.00"
                android:background="@drawable/text_bg"
                android:text="@string/warning3"
                android:inputType="number"
                android:textColor="#ffffffff"
                android:textSize="14.0dip"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip"
                android:layout_weight="0.00"
                android:background="@drawable/text_bg"
                android:text="@string/warning4"
                android:inputType="number"
                android:textColor="#ffffffff"
                android:textSize="14.0dip"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip"
                android:layout_weight="0.00"
                android:background="@drawable/text_bg"
                android:text="@string/warning5"
                android:inputType="number"
                android:textColor="#ffffffff"
                android:textSize="14.0dip"
                android:textStyle="bold" />
            
            <TextView
                android:id="@+id/code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.0dip"
                android:layout_weight="0.00"
                android:background="@drawable/text_bg"
                android:text="@string/warning6"
                android:inputType="number"
                android:textColor="#ffffffff"
                android:textSize="14.0dip"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:scaleType="fitXY"
                android:src="@drawable/separator" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dip"
                android:background="@drawable/bg_next"
                android:text="我已阅读"
                android:textColor="#ffffff"
                android:textSize="18.0dip"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>